text align fixed

--- a/frontend/src/components/DesktopComponent/Core/UserIntentPage/ImproveProfile/ShineServices/shineServices.scss
+++ b/frontend/src/components/DesktopComponent/Core/UserIntentPage/ImproveProfile/ShineServices/shineServices.scss
@@ -46,6 +46,8 @@
             font-size: 3.5rem;
             font-weight: 700;
             fill: $gray-100;
+            dominant-baseline: middle;
+            text-anchor: middle;
         }
 
         .CircularProgressbar-path {
